Updated stylesheets and introduction.

--- a/app/chooseyourstory.html
+++ b/app/chooseyourstory.html
@@ -1,60 +1,27 @@
-<!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation</title>
-    <link rel="stylesheet" href="css/app.css" />
-    <script src="bower_components/modernizr/modernizr.js"></script>
-  </head>
-  <body>
+<div class="header_container">
+  <h1>Whose Story Do You Want To Follow?</h1>
+</div>
 
-    <div class="header_container">
-      <h1>Who's Story Do You Want To Follow?</h1>
+<div class="cys_split_container">
+
+  <div class="cys_side cys_he_container">
+
+    <a href=""></a>
+    <div class="cys_text_overlay">
+      <h2>He</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales hendrerit pulvinar.</p>
     </div>
 
-    <div class="cys_split_container">
+  </div>
 
-      <div class="cys_side cys_he_container">
+  <div class="cys_side cys_she_container">
 
-        <a href=""></a>
-        <div class="cys_text_overlay">
-          <h2>He</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales hendrerit pulvinar.</p>
-        </div>
-        <div class="flexslider">
-          <ul class="slides">
-            <li style="background: url('img/he_intro.jpg')"></li>
-            <li style="background: url('img/she_intro.jpg')"></li>
-            <li style="background: url('img/he_intro.jpg')"></li>
-          </ul>
-        </div>
-
-      </div>
-
-      <div class="cys_side cys_she_container">
-
-        <a href=""></a>
-        <div class="cys_text_overlay">
-          <h2>She</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales hendrerit pulvinar.</p>
-        </div>
-        <div class="flexslider">
-          <ul class="slides">
-            <li style="background: url('img/he_intro.jpg')"></li>
-            <li style="background: url('img/she_intro.jpg')"></li>
-            <li style="background: url('img/he_intro.jpg')"></li>
-          </ul>
-        </div>
-
-      </div>
-
+    <a href=""></a>
+    <div class="cys_text_overlay">
+      <h2>She</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales hendrerit pulvinar.</p>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/jquery.flexslider-min.js"></script>
-  </body>
-</html>
+  </div>
+
+</div>
