--- a/app/actoneintro.html
+++ b/app/actoneintro.html
@@ -9,13 +9,16 @@
   </head>
   <body>
 
-    <video autoplay loop poster="polina.jpg" id="bgvid">
-      <source src="video/intro_video.mp4" type="video/mp4">
-    </video>
+    <div class="fullscreen-bg">
 
-    <div class="intro_container">
-      <a class="primary_button" href="chooseyourstory.html">Continue</a>
+      <video autoplay id="bgvid">
+        <source src="video/act1_background.webm" type="video/webm">
+        <source src="video/act1_background.mp4" type="video/mp4">
+      </video>
+
     </div>
+
+    <div id="choose_your_story"></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
