--- a/app/maincontainer.html
+++ b/app/maincontainer.html
@@ -5,25 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation</title>
     <link rel="stylesheet" href="css/app.css" />
+    <script src="bower_components/react/react-with-addons.js"></script>
+    <script src="bower_components/react/JSXTransformer.js"></script>
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
 
-    <video autoplay loop id="cya_bgvid">
-      <source src="video/home_video.mp4" type="video/mp4">
-    </video>
-
-    <div class="intro_container">
-      <h1>He Said She Said</h1>
-      <div class="intro_text">
-          <p>He Said/She Said is an interactive love diary comprised of curated digital entries, testing the limits of technology in its ability to shape and distort the stories we tell.</p>
-      </div>
-      <a class="primary_button" href="actoneintro.html">Continue to act 1</a>
+    <div class="toggle_panel">
+      <h2>Her</h2>
     </div>
 
-    <div class="intros">
-      <div class="intro_left"></div>
-      <div class="intro_right"></div>
+    <div class="main_screen_container">
+      <div id="message_container"></div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
@@ -31,5 +24,12 @@
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/jquery.flexslider-min.js"></script>
+    <script type="text/jsx" src="js/react-components/messages.jsx"></script>
+    <script type="text/jsx">
+      React.render(
+        <Messenger id="messenger"></Messenger>,
+        document.getElementById('message_container')
+      );
+    </script>
   </body>
 </html>
