Updated introduction flow.

--- a/app/actoneintro.html
+++ b/app/actoneintro.html
@@ -18,7 +18,36 @@
 
     </div>
 
-    <div id="choose_your_story"></div>
+    <div id="choose_your_story">
+
+      <div class="header_container">
+        <h2>He Said She Said</h2>
+        <h1>Whose Story Do You Want To Follow?</h1>
+      </div>
+
+      <div class="cys_split_container">
+
+        <div class="cys_side cys_he_container">
+
+          <div class="cys_text_overlay">
+            <h2>John</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales hendrerit pulvinar.</p>
+          </div>
+
+        </div>
+
+        <div class="cys_side cys_she_container">
+
+          <div class="cys_text_overlay">
+            <h2>Sue</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales hendrerit pulvinar.</p>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
