--- a/app/chooseyourstory.html
+++ b/app/chooseyourstory.html
@@ -6,7 +6,7 @@
 
   <div class="cys_side cys_he_container">
 
-    <a href=""></a>
+    <a href="http://localhost:8888/hesaidshesaid/app/maincontainer.html"></a>
     <div class="cys_text_overlay">
       <h2>He</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales hendrerit pulvinar.</p>
