--- a/app/maincontainer.html
+++ b/app/maincontainer.html
@@ -9,10 +9,24 @@
     <script src="bower_components/react/JSXTransformer.js"></script>
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
-  <body>
+  <body class="he_toggled">
 
-    <div class="toggle_panel">
-      <h2>Her</h2>
+    <!-- HEADER -->
+
+    <div class="header">
+
+      <div class="he_said_header">
+        <h1>"He Said</h1>
+      </div>
+
+      <div class="she_said_header">
+        <h1>She Said"</h1>
+      </div>
+
+      <a class="trigger-overlay">
+        <i class="fa fa-bars fa-lg"></i>
+      </a>
+
     </div>
 
     <div class="main_screen_container">
