--- a/app/messages.html
+++ b/app/messages.html
@@ -23,9 +23,9 @@
       );
       // messenger.setBackground('rgba(0,0,177,.25)');
 
-      var postAlert = function() {
-        console.log('it worked');
-      }
+      // var postAlert = function() {
+      //   console.log( this.getDOMNode().querySelector('audio') );
+      // }
 
       messenger.post({
         message: 'At the time of meeting he was in an open relationship.',
