Fix z-index and header height for message container

--- a/app/actoneintro.html
+++ b/app/actoneintro.html
@@ -24,7 +24,7 @@
 
       <div class="header_container">
         <h2>He Said She Said</h2>
-        <h1>Whose point of view do you want to experience first?h</h1>
+        <h1>Whose point of view do you want to experience first?</h1>
       </div>
 
       <div class="cys_split_container">
