Add host property on Message to access Messenger container

--- a/app/actoneintro.html
+++ b/app/actoneintro.html
@@ -70,6 +70,7 @@
 
       var postAlert = function() {
         console.log('it worked');
+        console.log(this);
       }
 
       messenger.post({
