She said header notification animation

--- a/app/chooseyouract.html
+++ b/app/chooseyouract.html
@@ -17,6 +17,7 @@
       <h1>He Said She Said</h1>
       <div class="intro_text">
           <p>He Said/She Said is an interactive love diary comprised of curated digital entries, testing the limits of technology in its ability to shape and distort the stories we tell.</p>
+          <p>Created and Narrated by J. Faye Yuan</p>
       </div>
       <a class="primary_button" href="actoneintro.html">Continue to act 1</a>
     </div>
