--- a/app/actoneintro.html
+++ b/app/actoneintro.html
@@ -72,7 +72,7 @@
         var host = this.props.host;
         audioNode.addEventListener('play', function() {
           console.log("You're playing audio");
-          host.setBackgroundImage("linear-gradient(rgba(0,0,187,.50),rgba(0,0,187,.50)), url('https://photos-4.dropbox.com/t/2/AABnRBQttgaK9R568fWet_sxM0U7oBEwlJolGZg_NwdHUg/12/456664817/jpeg/32x32/1/_/1/2/NumberEx3.jpeg/ELCfvNgDGEIgBygH/UMN2SrZsu6Hbon_hQnZmXqOaxSqgoKgmDpUjmyVLqLI?size=1024x768&size_mode=2')");
+          host.setBackgroundImage("linear-gradient(rgba(0,0,187,.50),rgba(0,0,187,.50)), url('img/NumberEx3.jpeg')");
         });
       }
 
