--- a/app/chooseyouract.html
+++ b/app/chooseyouract.html
@@ -30,6 +30,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="//use.typekit.net/jyf0kku.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <script src="js/app.js"></script>
     <script src="js/jquery.flexslider-min.js"></script>
   </body>
