Adjusting hover r transitions on the header and updating cursor hover to pointer on the he/she decision.

--- a/app/actoneintro.html
+++ b/app/actoneintro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation</title>
+    <title>He Said She Said</title>
     <link rel="stylesheet" href="css/app.css" />
     <script src="bower_components/react/react-with-addons.js"></script>
     <script src="bower_components/react/JSXTransformer.js"></script>
@@ -95,6 +95,7 @@
         contentType: 'text',
         self: false
       }, true);
+
       johnMessenger.post({
         message: 'https://raw.githubusercontent.com/tholman/elevator.js/master/demo/music/elevator.mp3',
         contentType: 'audio',
@@ -102,10 +103,11 @@
       }, true, johnFirstAlert);
 
       sueMessenger.post({
-        message: 'At the time of meeting he was in an open relationship. this is the other one',
+        message: 'At the time of meeting she was in an open relationship.',
         contentType: 'text',
         self: false
       }, true);
+
        sueMessenger.post({
         message: 'https://raw.githubusercontent.com/tholman/elevator.js/master/demo/music/elevator.mp3',
         contentType: 'audio',
