Creating final video div and class to fade in on callback.

--- a/app/actoneintro.html
+++ b/app/actoneintro.html
@@ -56,6 +56,15 @@
       <div id="sue_message_container"></div>
     </div>
 
+    <div class="summary_video">
+
+      <video id="bgvid">
+        <source src="video/act1_background.webm" type="video/webm">
+        <source src="video/act1_background.mp4" type="video/mp4">
+      </video>
+
+    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
