--- a/app/actoneintro.html
+++ b/app/actoneintro.html
@@ -77,6 +77,7 @@
         document.getElementById('sue_message_container')
       );
       sueMessenger.setBackgroundColor('rgba(255,0,0,.25)');
+      sueMessenger.hideInput();
 
       var johnFirstAlert = function() {
         var audioNode = this.getDOMNode().querySelector('audio');
@@ -122,6 +123,9 @@
             self: false,
           })
         },interval*4)
+        setTimeout(function() {
+          johnMessenger.prompt("What are YOUR feelings?");
+        },interval*5);
       };
 
       johnMessenger.post({
