--- a/app/actoneintro.html
+++ b/app/actoneintro.html
@@ -32,6 +32,7 @@
         <div class="cys_side cys_he_container">
 
           <div class="cys_text_overlay">
+            <img src="img/he_icon_title.png" />
             <h2>John</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales hendrerit pulvinar.</p>
           </div>
@@ -41,6 +42,7 @@
         <div class="cys_side cys_she_container">
 
           <div class="cys_text_overlay">
+            <img src="img/she_icon_title.png" />
             <h2>Sue</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales hendrerit pulvinar.</p>
           </div>
@@ -93,7 +95,7 @@
         var host = this.props.host;
         audioNode.addEventListener('play', function() {
           console.log("You're playing audio");
-          host.setBackgroundImage("linear-gradient(rgba(0,0,187,.50),rgba(0,0,187,.50)), url('img/NumberEx3.jpeg')");
+          host.setBackgroundImage("linear-gradient(rgba(68,135,199,.2),rgba(68,135,199,.2)), url('img/NumberEx3.jpeg')");
           // firstJohnMessage.dropMessage();
         });
 
@@ -109,6 +111,10 @@
 
       var firstSueMessageCallback = function() {
         var audioNode = this.getDOMNode().querySelector('audio');
+        var host = this.props.host;
+        audioNode.addEventListener('play', function() {
+          host.setBackgroundImage("linear-gradient(rgba(235,93,75,.2),rgba(235,93,75,.2)), url('img/NumberEx3.jpeg')");
+        });
         audioNode.play();
         audioNode.addEventListener('ended', function() {
           flipToJohn();
