Style adjustments on home screen. Style adjustments on message input panel.

--- a/app/chooseyouract.html
+++ b/app/chooseyouract.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>He Said She Said</title>
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
@@ -19,7 +20,7 @@
           <p>He Said/She Said is an interactive love diary comprised of curated digital entries, testing the limits of technology in its ability to shape and distort the stories we tell.</p>
           <p>Created and Narrated by J. Faye Yuan</p>
       </div>
-      <a class="primary_button" href="actoneintro.html">Continue to act 1</a>
+      <a class="primary_button" href="actoneintro.html">Start <i style="margin-left: 5px;" class="fa fa-long-arrow-right fa-lg"></i></a>
     </div>
 
     <div class="intros">
